--- a/jokes_app_flutter/pubspec.yaml
+++ b/jokes_app_flutter/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
 
   dio: ^5.2.0
+  shared_preferences: ^2.0.6
+  http: ^0.13.3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
